Minor Changes to Sidebar

--- a/list-me/src/header.css
+++ b/list-me/src/header.css
@@ -137,7 +137,7 @@ header{
     display: flex;
     align-items: center;
     flex-direction: row;
-    color: red;
+    color: #FA5252;
     border-radius: 4px;
 }
 
