--- a/list-me/src/index.css
+++ b/list-me/src/index.css
@@ -7,6 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #F8F9FA;
   overflow-x: hidden;
+  overflow-y: hidden;
+  height: 100%;
+  width: 100%;
+}
+
+#root{
+  height: 100vh;
+  width: 100vw;
 }
 
 
