--- a/list-me/src/index.css
+++ b/list-me/src/index.css
@@ -6,14 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F8F9FA;
-  overflow-x: hidden;
-  overflow-y: hidden;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 #root{
-  height: 100vh;
+  max-height: 100vh;
   width: 100vw;
 }
 
