--- a/list-me/src/sidebar.css
+++ b/list-me/src/sidebar.css
@@ -1,12 +1,3 @@
-/* Base Styles */
-.sidebar-container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 200px;
-    height: 100%;
-}
-
 .sidebar-toggle-button {
     float: left;
     display: none;
@@ -40,7 +31,7 @@
     flex-direction: column;
     top: 0;
     left: 0;
-    height: 100%;
+    height: auto;
     transition: transform 0.3s ease;
 }
 
@@ -67,6 +58,7 @@
 
 .text {
     font-size: 16px;
+    text-align:left ;
 }
 
 /* Mobile: Sidebar Hidden */
@@ -88,6 +80,7 @@
 @media (min-width: 601px) and (max-width: 1024px) {
     .sidebar {
         width: 110px;
+        padding: 10px;
     }
 
     .sidebar-item {
@@ -98,6 +91,7 @@
     .text {
         font-size: 12px;
         margin: 0;
+        text-align: center;
     }
 }
 
@@ -106,7 +100,6 @@
     .sidebar {
         position: static;
         transform: translateX(0);
-        height: 100%;
         width: 200px;
     }
 
