--- a/list-me/src/sidebar.css
+++ b/list-me/src/sidebar.css
@@ -29,10 +29,13 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    top: 0;
+    top: 57px;
     left: 0;
     height: auto;
     transition: transform 0.3s ease;
+    position: fixed;
+    height: 100%;
+
 }
 
 .sidebar-item {
@@ -66,7 +69,7 @@
     transform: translateX(0);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 670px) {
     .sidebar {
         transform: translateX(-100%);
     }
@@ -77,7 +80,7 @@
 }
 
 /* Medium Screens: Icons with Text Underneath */
-@media (min-width: 601px) and (max-width: 1024px) {
+@media (min-width: 671px) and (max-width: 1024px) {
     .sidebar {
         width: 110px;
         padding: 10px;
@@ -98,7 +101,6 @@
 /* Large Screens: Permanent Sidebar */
 @media (min-width: 1025px) {
     .sidebar {
-        position: static;
         transform: translateX(0);
         width: 200px;
     }
